--- a/Evo3/app/src/main/res/values/strings.xml
+++ b/Evo3/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main_activity2">MainActivity2Activity</string>
     <string name="title_activity_main_activity22">MainActivity22Activity</string>
+    <string name="title_activity_main_interface">MainInterface</string>
 </resources>
