--- a/Evo3/app/src/main/res/values/strings.xml
+++ b/Evo3/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="title_activity_achievement">Achievement</string>
     <string name="title_activity_about">about</string>
     <string name="title_activity_survival">Survival</string>
+    <string name="title_activity_battle">Battle</string>
 </resources>
